# django-cards

./: .gitignore  MANIFEST.in  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py  test_treegrid_browser.py
cards/: apps.py  base.py  card_list.py  channels.py  includes.py  modals.py  panel_layout.py  standard.py  tree_list.py  url_converters.py
cards/card_list/: __init__.py  base.py  main.py  tree.py
cards/static/cards/scrollable_tab_menu/: scrollable_tab_menu.css
cards/templates/cards/groups/: groups.html
cards/templates/cards/list/: list.html  list_content.html  list_head.html
cards/templates/cards/standard/: _column_search_script.html  _export_button.html  _export_script.html  _panel_split.html  _reload_button.html  _reload_script.html  _search_input.html  _search_script.html  _treegrid_css.html  (+20 more)
cards/templatetags/: django_cards_tags.py
django_examples/cards_examples/: admin.py  apps.py  import_data.py  includes.py  models.py  urls.py  views.py
django_examples/cards_examples/migrations/: 0001_initial.py  0002_person_age.py  0003_status.py  0004_auto_20240829_0905.py  0005_person_is_active.py
django_examples/cards_examples/templates/: base.html
django_examples/cards_examples/tests/: test_treegrid.py
django_examples/cards_examples/views/: accordion.py  base.py  child_cards.py  datatable.py  linked_datatables.py  list.py  main.py  modal.py  new_features.py  panel_layout.py  row_styles.py  tree.py  treegrid.py
django_examples/django_examples/: settings.py  urls.py
manual_tests/: treegrid_browser.py  treegrid_inline.py
(+11 files in other folders)
